--- a/UserApi/Cargo.toml
+++ b/UserApi/Cargo.toml
@@ -11,5 +11,8 @@ crate-type = ["cdylib"]
 [dependencies]
 anyhow = "1"
 spin-sdk = "3.1.0"
+spin-http = "3.1.0"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
 
 [workspace]
